// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectable is rendered 1`] = `
<div
  class="euiSelectable testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiSelectable props allowExclusions 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be forced 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be full 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
/>
`;

exports[`EuiSelectable props isLoading 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props listProps 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props renderOption 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props searchable 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props singleSelection 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 1`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 2`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;
